packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/broad-catch/BroadCatchCase.java
package sample.bad;

class BroadCatchCase {
    void run() {
        try {
            risky();
        } catch (Exception e) {
            throw new IllegalStateException(e);
        }
    }

    private void risky() {
    }
}
